engelsizler talepler icin olen kisilerin taleplerini otomatik olarak tamamlanamadı olarak guncellemesi icin eklendi